<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<!--        How to Play-->
        <TextView
            android:text="@string/gameplay_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"

            />

<!--        Snake-->
        <TextView
            android:text="@string/snake_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

<!--        Ladders-->
        <TextView
            android:text="@string/ladders_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />


        <!--        Winning the Game-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winning_game_description"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <!--        Bounce back Variation-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/bounce_back_description"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/back_main_button"
            android:text="@string/back_main_string"
            android:layout_width="387dp"
            android:layout_height="49dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>